<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <TextView
            android:id="@+id/textToBeChanged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Hello World!"/>

    <EditText
            android:id="@+id/editTextUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="Enter Text Here"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/changeTextBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editing Text..."
            android:layout_gravity="center_horizontal"/>

</LinearLayout>
